<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="io.github.vuvannamsec.personalfinance.viewmodel.TransactionViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_md"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_income"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_expense"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_transactions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="@dimen/spacing_md"
                tools:itemCount="10"
                tools:listitem="@layout/item_transaction" />

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_data"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_normal"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/spacing_md"
            android:contentDescription="@string/add_transaction"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/primary" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
